@@ -1,6 +1,7 @@
 package com.example.apigateway.config;
 
 import com.example.apigateway.dto.ApiResponse;
+import com.example.apigateway.dto.IntrospectResponse; // Đảm bảo DTO này đã được tạo và có các trường cần thiết
 import com.example.apigateway.service.IdentityService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -19,7 +20,6 @@ import org.springframework.util.CollectionUtils;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -30,7 +30,8 @@ public class AuthenticationFilter implements GlobalFilter, Ordered {
     private final IdentityService identityService;
     private final ObjectMapper objectMapper;
 
-    private final List<String> publicPaths = Arrays.asList(
+    // Danh sách các API REST công khai, không yêu cầu xác thực.
+    private final List<String> publicApiPaths = List.of(
             "/api/v1/auth/login",
             "/api/v1/auth/register",
             "/api/v1/auth/introspect"
@@ -39,78 +40,101 @@ public class AuthenticationFilter implements GlobalFilter, Ordered {
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
         ServerHttpRequest request = exchange.getRequest();
+        String path = request.getURI().getPath();
 
-        if (isPublicEndpoint(request)) {
+        // BƯỚC 1: BỎ QUA HOÀN TOÀN CÁC REQUEST WEBSOCKET
+        // Việc định tuyến và xử lý sẽ do các route trong application.yml đảm nhiệm.
+        // Việc bảo mật cho WebSocket (nếu cần) sẽ được xử lý ở một lớp khác.
+        if (path.startsWith("/ws")) {
+            log.trace("WebSocket request detected, skipping authentication filter for path: {}", path);
             return chain.filter(exchange);
         }
 
+        // BƯỚC 2: KIỂM TRA CÁC API REST PUBLIC
+        if (isPublicApi(path)) {
+            log.trace("Public API request detected, skipping authentication filter for path: {}", path);
+            return chain.filter(exchange);
+        }
+
+        // BƯỚC 3: XÁC THỰC TẤT CẢ CÁC API CÒN LẠI
+
+        // 3a. Kiểm tra sự tồn tại của header Authorization
         List<String> authHeaders = request.getHeaders().get(HttpHeaders.AUTHORIZATION);
         if (CollectionUtils.isEmpty(authHeaders)) {
-            log.warn("Unauthenticated request: missing Authorization header");
+            log.warn("Unauthenticated request to '{}': missing Authorization header", path);
             return unauthenticated(exchange.getResponse());
         }
 
+        // 3b. Kiểm tra định dạng 'Bearer '
         String authHeader = authHeaders.get(0);
         if (!authHeader.startsWith("Bearer ")) {
-            log.warn("Unauthenticated request: Authorization header is not a Bearer token");
+            log.warn("Unauthenticated request to '{}': Authorization header is not a Bearer token", path);
             return unauthenticated(exchange.getResponse());
         }
 
         String token = authHeader.substring(7);
 
+        // 3c. Gọi đến Identity Service để xác thực token
         return identityService.introspect(token)
                 .flatMap(introspectResponse -> {
+                    // 3d. Xử lý kết quả từ Identity Service
                     if (introspectResponse == null || !introspectResponse.active()) {
-                        log.warn("Token is invalid or inactive");
+                        log.warn("Token is invalid or inactive for request to '{}'", path);
                         return unauthenticated(exchange.getResponse());
                     }
 
+                    // 3e. Gắn thông tin user vào header và chuyển tiếp request
                     ServerHttpRequest newRequest = exchange.getRequest().mutate()
                             .header("X-Authenticated-User-Username", introspectResponse.username())
                             .header("X-Authenticated-User-Roles", String.join(",", introspectResponse.roles()))
                             .header("X-Authenticated-User-Id", introspectResponse.userId().toString())
                             .build();
 
-                    log.info("Authenticated user {}, forwarding request to service", introspectResponse.username());
+                    log.info("Authenticated user '{}', forwarding request to service for path '{}'", introspectResponse.username(), path);
                     return chain.filter(exchange.mutate().request(newRequest).build());
                 });
     }
 
+    /**
+     * Đặt độ ưu tiên cho filter này.
+     * Giá trị âm có độ ưu tiên cao hơn. -1 đảm bảo nó chạy trước hầu hết các filter khác.
+     */
     @Override
     public int getOrder() {
-        return -1; // Đặt độ ưu tiên cao
+        return -1;
     }
 
-    private boolean isPublicEndpoint(ServerHttpRequest request) {
-        String path = request.getURI().getPath();
-        boolean isPublic = publicPaths.contains(path);
-
-        // Xử lý riêng cho WebSocket
-        if(path.startsWith("/ws")){
-            return true;
-        }
-
-//        if (!isPublic && path.startsWith("/ws")) {
-//            return true;
-//        }
-
-        return isPublic;
+    /**
+     * Kiểm tra xem một đường dẫn có nằm trong danh sách các API public hay không.
+     * @param path Đường dẫn của request.
+     * @return true nếu là API public, ngược lại là false.
+     */
+    private boolean isPublicApi(String path) {
+        return publicApiPaths.contains(path);
     }
 
+    /**
+     * Xây dựng và trả về một response lỗi 401 Unauthorized.
+     * @param response Đối tượng ServerHttpResponse.
+     * @return Mono<Void> để kết thúc chuỗi xử lý.
+     */
     private Mono<Void> unauthenticated(ServerHttpResponse response) {
         ApiResponse<?> apiResponse = ApiResponse.builder()
-                .code(HttpStatus.UNAUTHORIZED.value()) // Dùng HttpStatus cho nhất quán
+                .code(HttpStatus.UNAUTHORIZED.value())
                 .message("Unauthenticated")
                 .build();
-        String body;
+
+        byte[] body;
         try {
-            body = objectMapper.writeValueAsString(apiResponse);
+            body = objectMapper.writeValueAsBytes(apiResponse);
         } catch (JsonProcessingException e) {
             log.error("Error writing JSON response", e);
-            body = "{\"code\":401,\"message\":\"Unauthenticated\"}";
+            body = "{\"code\":401,\"message\":\"Unauthenticated\"}".getBytes();
         }
+
         response.setStatusCode(HttpStatus.UNAUTHORIZED);
         response.getHeaders().add(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
-        return response.writeWith(Mono.just(response.bufferFactory().wrap(body.getBytes())));
+
+        return response.writeWith(Mono.just(response.bufferFactory().wrap(body)));
     }
 }
